implementing childfirst classloading strategy to hot load/reload project classess and or project dependencies